--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
                 </h2>
                 <h2 class="text-primary text-center fw-bold mb-2">Computer Science Graduate</h2>
                 <p class="lead text-muted mb-4">
-                  A recent graduate with a strong foundation in Frameworks, Machine Learning APIs, Databases and Web Development scroll down and explore the innovative projects that I have been working on.
+                  A recent graduate with a strong foundation in Frameworks, Machine Learning, APIs, Databases and Web Development scroll down and explore the innovative projects that I have been working on.
                 <div class="d-grid gap-3 d-sm-flex justify-content-center">
                   <a class="btn btn-primary btn-large text-uppercase" href="#about">
                     Learn More
